# try_dynamodb

./: bookdata.py  create_table_isbn.py  pyproject.toml
