[tool.poetry]
name = "try_dynamodb"
version = "0.1.0"
description = ""
authors = ["k_yamanaka <vaivailx+git@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.19.2"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
